# loophole

./: .gitignore  CHANGELOG.ja.md  CHANGELOG.md  README.ja.md  README.md  loophole.mcp.json  pyproject.toml  run-tests.sh
docs/: agent-autostart.md  architecture.md  cli.md  client-setup.md  dev-notes.md  linux-setup.md  mac-setup.md  menu-automation-design.md  menu-automation-impl-plan.md  multi-target-design.md  operator-runbook.md  protocol.md  psexec-headless.md  uninstall.md  vnc-for-computer-use-testing.md  windows-openssh-server.md  windows-setup.md  xfreerdp-install.md
loophole/: __init__.py  cli.py  mcp_server.py  registry.py
scripts/: clean_reinstall_ssh.ps1  grant-batch-logon.ps1  install-agent.ps1  install-capture-tools.ps1  mac-install-agent.sh  provision-test-account.ps1  redact-session-secret.py  start-agent.cmd  teardown-test-account.ps1  uninstall_openssh.ps1
server/: agent.py  backends.py  common_backends.py  darwin_backends.py  handlers.py  history.py  imaging.py  keys.py  linux_backends.py  protocol.py  requirements-optional.txt  viewer.py  win_backends.py  win_uia_menu.py
tests/: fakes.py  linux_testlib.py  smoke_linux_x11.py  test_agent.py  test_common_backends.py  test_darwin_build.py  test_darwin_clipboard.py  test_darwin_ime.py  test_darwin_keyboard.py  test_darwin_mouse.py  test_darwin_screenshot.py  test_darwin_window.py  test_e2e_loopback.py  test_handlers.py  test_history.py  test_keys.py  test_linux_build.py  test_linux_clipboard.py  test_linux_ime.py  test_linux_keyboard.py  test_linux_menu.py  test_linux_mouse.py  test_linux_window.py  (+11 more)
(+23 files in other folders)
